// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api key form 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField />
      </Box>
      <ApiKeyCheckBox
        createApiKey={true}
      />
      <ApiKeyFields
        grants={
          Array [
            "subaccount grants",
          ]
        }
        show={true}
        showGrants={false}
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <ButtonWrapper>
      <Button
        submit={true}
        variant="primary"
      >
        Create Subaccount
      </Button>
      <PageLink
        as={[Function]}
        to="/account/subaccounts"
        variant="secondary"
      >
        Cancel
      </PageLink>
    </ButtonWrapper>
  </Panel.Section>
</form>
`;

exports[`base case 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField />
      </Box>
      <ApiKeyCheckBox
        createApiKey={false}
      />
      <ApiKeyFields
        grants={
          Array [
            "subaccount grants",
          ]
        }
        show={false}
        showGrants={false}
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <ButtonWrapper>
      <Button
        submit={true}
        variant="primary"
      >
        Create Subaccount
      </Button>
      <PageLink
        as={[Function]}
        to="/account/subaccounts"
        variant="secondary"
      >
        Cancel
      </PageLink>
    </ButtonWrapper>
  </Panel.Section>
</form>
`;

exports[`has ip pools 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField />
      </Box>
      <ApiKeyCheckBox
        createApiKey={false}
      />
      <ApiKeyFields
        grants={
          Array [
            "subaccount grants",
          ]
        }
        show={false}
        showGrants={false}
      />
      <Stack>
        <RestrictToIpPoolCheckbox />
      </Stack>
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <ButtonWrapper>
      <Button
        submit={true}
        variant="primary"
      >
        Create Subaccount
      </Button>
      <PageLink
        as={[Function]}
        to="/account/subaccounts"
        variant="secondary"
      >
        Cancel
      </PageLink>
    </ButtonWrapper>
  </Panel.Section>
</form>
`;

exports[`has ip pools and checked checkbox 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField />
      </Box>
      <ApiKeyCheckBox
        createApiKey={false}
      />
      <ApiKeyFields
        grants={
          Array [
            "subaccount grants",
          ]
        }
        show={false}
        showGrants={false}
      />
      <Stack>
        <RestrictToIpPoolCheckbox />
        <IpPoolSelect
          options={
            Array [
              "salt water",
            ]
          }
        />
      </Stack>
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <ButtonWrapper>
      <Button
        submit={true}
        variant="primary"
      >
        Create Subaccount
      </Button>
      <PageLink
        as={[Function]}
        to="/account/subaccounts"
        variant="secondary"
      >
        Cancel
      </PageLink>
    </ButtonWrapper>
  </Panel.Section>
</form>
`;

exports[`submits correctly 1`] = `
<form
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": undefined,
    }
  }
>
  <Panel.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField
          disabled={true}
        />
      </Box>
      <ApiKeyCheckBox
        createApiKey={false}
        disabled={true}
      />
      <ApiKeyFields
        grants={
          Array [
            "subaccount grants",
          ]
        }
        show={false}
        showGrants={false}
        submitting={true}
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <ButtonWrapper>
      <Button
        disabled={true}
        submit={true}
        variant="primary"
      >
        Loading...
      </Button>
      <PageLink
        as={[Function]}
        disabled={true}
        to="/account/subaccounts"
        variant="secondary"
      >
        Cancel
      </PageLink>
    </ButtonWrapper>
  </Panel.Section>
</form>
`;
